Fixed minor spacing issue in MyDiningHistory

--- a/react-app/src/components/Reservations/MyDiningHistory.css
+++ b/react-app/src/components/Reservations/MyDiningHistory.css
@@ -173,7 +173,7 @@
 .dining-dashboard-under-points-border-bottom-line {
     border-bottom: solid;
     border-color: rgb(231, 230, 230);
-    height: 20px;
+    height: 30px;
     border-width: thin;
 }
 
@@ -199,7 +199,7 @@
 
 .dining-dashboard-learn-more-rewards-text {
     font-size: 1rem;
-    margin-top: 17px;
+    margin-top: 25px;
     margin-left: 25px;
     color: rgb(37, 127, 158);
     font-weight: 400;
